# qoa4ml

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.txt  LICENSE  README.md  dev_note.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: gh-page-ci.yml  python-ci.yml
config/: probe_metadata.json  rohe_obs_conf.json
config/template_config/: metric_config.yaml
docs/: index.md
example/bts/: readme.md
example/bts/bts_client/: LSTM_Prediction_Client.py  client.json  lstm_rest_client.py
example/bts/bts_server/: LSTM_Prediction_PlainServer.py  LSTM_Prediction_Server.py  ML_Loader.py  bts_prediciton_server.py  bts_prediciton_service.py  command.json  predictionServerV1.py  predictionServerV2.py  server.json
example/bts/qoa_server/: prometheus.yml  qoa_config.json  qoa_server.py  run.sh
example/dataquality/: basic_dataquality.py
example/dataquality/config/: client1.yaml
example/docker_report/: docker_probe.py
example/docker_report/config/: client1.yaml
example/qoa_client/: .$overview.drawio.bkp  overview.drawio  qoa_client_example.py
example/qoa_client/config/: client_config.json
example/reports/: qoa_report_example.json  qoa_report_example.txt
example/simple/: collector.py  ensemble_ml.py  general_ml.py  qoa4ml-general-ml-report-schema.json  rabbitmq.sh  readme.md  schema.json  test.py
example/simple/config/: client1.yaml  client2.yaml  client3.yaml  client4.yaml  client5.yaml
language/: generate_contract_schema.py  generate_qoa_attributes.py  generate_report_schema.py  qoa4ml-attributes-v0.2.json  qoa4ml-attributes-v0.3.json  qoa4ml-contract-schema-v0.3.json  qoa4ml-core-ensemble-v0.2.json  qoa4ml-core-ensemble.json  qoa4ml-core-v0.2.json  qoa4ml-core.json  qoa4ml-ensemble-ml-report-schema.json  qoa4ml-general-ml-report-schema.json  qoa4ml-report-common-schema-v0.1.json  qoa4ml-report-eemls-schema-v0.1.json  qoa4ml-report-ml-schema-v0.1.json
language/old/: qoa4ml-core.json
language/qoa4mlopa/: bim-contract-basic.json  bim-policies-basic-embedded.rego  bim-policies-basic.rego  bts-contract-ex1.json  bts-policies-ex1.rego
observability/: simple_evaluation.py
observability/ODOP_Ob/: CSC_monitoring_service.py  ODOP_ObService.py  ODOP_Observability.py  monitoring_service.json  node_exporter.py  system_monitoring_probe.py
observability/ODOP_Ob/testdb/: profileProcess.py  sqlite_test.py
observability/odop_obs/: Obs_Service_conf.json  csc_monitoring_service.py  db.csv  exporter.py  latency_test.py  node_aggregator.py  node_exporter.py  odop_obs.py  odop_obs_conf.yaml  odop_obs_ervice.py  odop_obs_service.py  odop_utils.py  probe.py  probe_conf.json  proces_probe_conf.json  process_monitoring_probe.py  process_probe_conf.yaml  query_parameter.json  requirements.txt  simple_client.py  system_monitoring_probe.py  system_probe_conf.json  system_probe_conf.yaml  test.py  unit_conversion.yaml
observability/odop_obs/config/: exporter_config.yaml  node_aggregator_config.yaml  odop_obs_conf.yaml  process_probe_conf.yaml  system_probe_conf.yaml
observability/odop_obs/core/: common.py  probe.py
observability/odop_obs/logs/: statistics_calculator.py
observability/odop_obs/testdb/: db.json  shelve_test.py  sqlite_test.py  tinydb_test.py  tinyflux_test.py
observability/odop_obs/tests/: latest_timestamp.json  mem_check.py  task_scheduler.py
observability/qoa4mlopa/: README.md
observability/qoa4mlopa/bts_example/: contract.json  run.sh  submit_contract.sh  submit_policies.sh
observability/rohe_ObService/: rohe_Agent.py  rohe_ObService.py
qoa4ml/: MANIFEST.in  metric.py  metric_mananger.py  pyproject.toml  qoa_client.py
qoa4ml/collector/: amqp_collector.py  base_collector.py  socket_collector.py
qoa4ml/connector/: amqp_connector.py  base_connector.py  socket_connector.py
qoa4ml/lang/: datamodel_enum.py
qoa4ml/observability/odop_obs/config/: exporter_config.yaml
qoa4ml/probes/: process_monitoring_probe.py
qoa4ml/reports/: rohe_reports.py
qoa4ml/src/: metric_mananger.py  pynvml_forked.py
qoa4ml/src/connector/: prom_connector.py
qoa4ml/src/datamodels/: common_models.py  datamodel_enum.py
qoa4ml/src/observability/odop_obs/: exporter.py
qoa4ml/src/observability/odop_obs/config/: unit_conversion.yaml
qoa4ml/src/observability/odop_obs/metric_database/: visualize_metric.py
qoa4ml/src/probes/: dataquality.py  mlquality.py
qoa4ml/src/reports/: ROHE_reports.py
qoa4ml/templateConfig/: client_config.json
qoa4ml/tests/configs/: client_config.json  client_config_test.py
qoa4ml/utils/: gpu_utils.py  repeated_timer.py
qoa4ml_lib/: .pylintrc  CHANGELOG.txt  README.md  dev_note.md  dev_requirements.txt  exrequirements.txt  mkdocs.yml  ml_requirements.txt  pyproject.toml  requirements.txt  setup.py  workaround.md
qoa4ml_lib/conf/: client.json  client_config.yaml  collector.json  connector.json  metrics.json  qoa_config.json  system_metric.json
qoa4ml_lib/qoa4ml/: QoaClient.py  __init__.py  common.py  common_function.py  gpuProbe.py  gpuUtils.py  handlers.py  metric.py  metric_mananger.py  probes.py  pynvml_forked.py  qoaUtils.py  qoa_client.py  qoa_client_test.py  qoa_utils.py  reports.py  test.py  utils.py  virtual_env.py
qoa4ml_lib/qoa4ml/collector/: amqp_collector.py  host_object.py  socket_collector.py
qoa4ml_lib/qoa4ml/config/: configs.py
qoa4ml_lib/qoa4ml/connector/: amqp_client.py  amqp_connector.py  base_connector.py  mess_logging.py  mqtt_client.py  mqtt_connector.py  prom_connector.py  socket_connector.py
qoa4ml_lib/templateConfig/: client_config.json  client_config.yaml  metric_config.yaml  metrics_config.json
qoa4ml_lib/tests/: lazy-import-test.py  sandbox_test.py  test.py
reference/SUMMARY/: index.html
reference/qoa4ml/: index.html
scripts/: generate_contract_schema.py  generate_qoa_attributes.py  generate_report_schema.py
search/: search_index.json
src/qoa4ml/: __init__.py  metric.py  metric_mananger.py  qoa_client.py
tests/: gpu_test.py  simple_test.py
tests/qoaclient_test/: probes_test.py  qoaclient_test.py
(+160 files in other folders)
