[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qoa4ml"
version = "0.1.23"
description = "Quality of Analysis for Machine Learning"
authors = [
  {name = "AaltoSEA", email = "tri.m.nguyen@aalto.fi"}
]
license = { file = "LICENSE.txt" }
keywords = ["Monitoring Machine Learning"]
dependencies = [
  "certifi>=2023.7.22",
  "pika>=1.3.2",
  "psutil>=5.9.2",
  "python-dateutil>=2.8.2",
  "pytz>=2023.3.post1",
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
  "tzdata>=2023.3",
  "urllib3>=1.26.16",
  "pre-commit>=3.5.0",
  "fastapi>=0.110.2",
  "flatten_dict>=0.4.2",
  "pydantic>=2.7.0",
  "tinyflux>=1.0.0",
  "uvicorn>=0.29.0",
  "setuptools==65.5.1",
]
dynamic = [
  "readme",
]

[project.optional-dependencies]
dev = ["black", "isort", "pre-commit", "bumpver", "twine"]
ml = [
  "ydata-quality==0.1.0",
  "docker_py==1.10.6",
  "paho_mqtt==1.6.1",
  "Pillow==10.0.0",
  "prometheus-client==0.16.0",
  "tensorflow==2.13.0",
  "ydata-quality==0.1.0",
  "numpy>=1.23.5",
  "pandas>=1.4.3",
]

[project.urls]
repository = "https://github.com/rdsea/QoA4ML"

[tool.setuptools.dynamic]
readme = {file = ["README.md", "CHANGELOG.txt"]}

# [tool.setuptools.packages.find]
# where = ["qoa4ml"] 


[tool.bumpver]
current_version = "0.1.23"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
